# nginx_alias_map

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  __init__.py  nginx_alias_map.py  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
pelican/plugins/nginx_alias_map/: __init__.py  nginx_alias_map.py  test_nginx_alias_map.py
pelican/plugins/nginx_alias_map/test_data/: alias_map.expected  test_no_alias.md  test_one_alias.md  test_two_alias.md
