[tool.poetry]
name = "pelican-nginx-alias-map"
version = "1.0.1"
description = "This Pelican plugin creates an nginx-compatible map between the final page locations and prior locations, defined in the `Alias` attribute for any article or page."
authors = ["Gaige B. Paulsen <gaige@cluetrust.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/gaige/nginx_alias_map"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/gaige/nginx_alias_map/issues"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2, != 3.3.5", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}
flake8 = "^4.0"
flake8-black = "^0.2"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2, != 3.3.5"
pytest = "^6.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^2.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "nginx_alias_map"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
